--- a/style.css
+++ b/style.css
@@ -1,24 +1,60 @@
+*{
+    box-sizing: border-box;
+}
+
 body {
 
     background: #FFEFD5;
 
     font-family: Open Sans, sans-serif
 
+
 }
 
 header{
-
-    background: #f8eba0;
-    height: 150px;
-    border-bottom: 1px solid rgb(240, 193, 39);
-    margin-bottom: 30px;
     
-    
+    image-rendering: auto;
+    height: 50vh;
+    border-bottom: 3px solid rgb(240, 193, 39);
+    margin-bottom: 10px;
+      
 }
 
+header {
+    background-image: linear-gradient(rgba(178, 227, 247, 0.507), rgba(248, 171, 244, 0.404)),
+                  url("imagen/mulheres.png");
+}
+
+
+
+@media (max-width: 768px){
+
+    header{
+
+        margin-bottom: 20px;
+        height: 100px;
+    }
+
+}
+
+
+
 h1 {
-     text-transform: uppercase;
-     margin-bottom: 0;
+
+    margin-bottom: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+@media (max-width: 768px){
+    h1{
+        font-size: 36px;
+    }
+}
+
+
+p {
+    text-align: center;
 }
 
 section{
@@ -33,18 +69,34 @@ section{
 
     display: inline-block;
     margin: 10px;
-    border: 1px solid rgb(245, 217, 62);
+    border: 4px solid rgb(245, 217, 62);
     border-radius: 10px;
     vertical-align: top;
     max-height: 100%;
+}
+
+@media (max-width: 768px){
+    .card {
+        display: block;
+        margin: 20px 10px;
+    }
 }
 
 .card img{
     display: block;
     width: 300px;
     height: 300px;
+    border-radius:10px ;
 
 }
+
+@media( max-width: 768px){
+    .card details{
+        width: 100%;
+    }
+}
+
+
 
 .card details{
     width: 300px;
@@ -58,11 +110,26 @@ section{
 
 }
 
+@media ( max-width: 768px){
+    .card details summary {
+        font-size:  16px;
+    }
+}
+
 .card details p{
-    padding: 0 10px;
+    padding:  12px;
+}
+
+@media (max-width: 768px){
+    .card details p {
+         font-size: 14px;
+    }
 }
 
 .card datalist blockquote{
     color:  #777;
     font-style: italic;
 }
+
+
+
